fix: fix collapse changeEvent when accordion

--- a/packages/theme-chalk/collapse-item.scss
+++ b/packages/theme-chalk/collapse-item.scss
@@ -18,6 +18,7 @@
     height: getCssVar('collapse-item-title-height');
     padding-right: getCssVar('collapse-item-title-padding-right');
     line-height: getCssVar('collapse-item-title-height');
+    user-select: none;
     cursor: pointer;
 
     h3 {
